finished landaing page

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -19,7 +19,7 @@
       href="./styles/main.scss"
     />
   </head>
-  <body>
+  <body class="page__body">
     <header class="header">
       <div class="header__bg"></div>
       <div class="container">
@@ -40,11 +40,11 @@
             ХУДОЖНІЙ МУЗЕЙ
           </h1>
 
-          <a href="#" class="btn header__btn">
+          <a href="#sub" class="btn header__btn">
             КВИТКИ
           </a>
 
-          <a href="#" class="header__category">
+          <a href="#sub" class="header__category">
             ПОДІЇ
           </a>
         </div>
@@ -60,22 +60,22 @@
             <nav class="nav">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="#gallery" class="nav__link">
                     Галерея
                   </a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="#sub" class="nav__link">
                     Про Нас
                   </a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="#current" class="nav__link">
                     Виставки та події
                   </a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link">
+                  <a href="#footer" class="nav__link">
                     Контакти
                   </a>
                 </li>
@@ -128,7 +128,7 @@
     </aside>
 
     <main class="main">
-      <section class="current">
+      <section class="current" id="current">
         <div class="container">
           <h2 class="page-title">
             Актуальні події
@@ -190,7 +190,7 @@
         </div>
       </section>
 
-      <section class="announcement">
+      <section class="announcement" id="announcement">
         <div class="container">
           <div class="announcement__content">
             <div class="announcement__caption">
@@ -210,7 +210,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="page-title">
             Галерея
@@ -259,7 +259,7 @@
         </div>
       </section>
 
-      <section class="sub">
+      <section class="sub" id="sub">
         <div class="container">
           <h2 class="page-title sub__title">
             Підписка
@@ -286,6 +286,128 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a href="#" class="top-bar__link">
+              <img
+                src="./images/icons/logo.svg"
+                alt="Namu logo"
+                class="top-bar__img footer__img"
+              >
+            </a>
+
+            <div class="socials">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="icon icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="icon icon--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+
+          <div class="schedule footer__schedule">
+            <h4 class="schedule__title">
+              Графік роботи
+            </h4>
+
+            <div class="schedule__content footer__schedule-content">
+              <ul class="schedule__list footer__schedule-list">
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">12:00 — 20:00</span> середа
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">12:00 — 20:00</span> четвер
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">12:00 — 20:00</span> п’ятниця
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">11:00 — 19:00</span> субота
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__text--bold">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+
+              <div class="schedule__weekends footer__weekends">
+                <p>
+                  <span class="schedule__text--bold">Вихідні:</span> понеділок, вівторок
+                </p>
+
+                <p>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="contacts">
+            <h4 class="contacts__title">
+              Контакти:
+            </h4>
+
+            <a
+              href="https://maps.app.goo.gl/kJvRChjivUxhXr6d7"
+              class="contacts__link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a href="tel:+38 (044) 278-13-57" class="contacts__link">тел. +38 044 278-13-57</a>
+            <a href="tel:+38 (044) 278-13-57" class="contacts__link">факс +38 044 278-74-54</a>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a>
+          </div>
+
+          <nav class="nav footer__nav">
+            <ul class="nav__list footer__nav-list">
+              <li class="nav__item footer__nav-item">
+                <a href="#gallery" class="nav__link footer__nav-link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item footer__nav-item">
+                <a href="#sub" class="nav__link  footer__nav-link">
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item footer__nav-item">
+                <a href="#current" class="nav__link  footer__nav-link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item footer__nav-item">
+                <a href="#footer" class="nav__link  footer__nav-link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__bottom">
+            <p class="footer__designed">
+              Designed by Zhyriada Marina
+            </p>
+
+            <p class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
