--- a/src/index.html
+++ b/src/index.html
@@ -291,11 +291,11 @@
       <div class="container">
         <div class="footer__content">
           <div class="footer__top">
-            <a href="#" class="top-bar__link">
+            <a href="#" class="top-bar__link footer__img">
               <img
                 src="./images/icons/logo.svg"
                 alt="Namu logo"
-                class="top-bar__img footer__img"
+                class="top-bar__img"
               >
             </a>
 
