--- a/src/index.html
+++ b/src/index.html
@@ -231,29 +231,34 @@
         <div class="schedule__work">
           <p class="schedule__title">Графік роботи</p>
           <ul class="schedule__days">
-            <li class="schedule__day">
-              <span class="schedule__time">12:00 — 20:00</span>
-              середа
+            <li class="schedule__workingDay">
+              <p class="schedule__time">12:00 — 20:00</p>
+              <p class="schedule__day">середа</p>
             </li>
-            <li class="schedule__day">
-              <span class="schedule__time">12:00 — 20:00</span>
-              четверг
+            <li class="schedule__workingDay">
+              <p class="schedule__time">12:00 — 20:00</p>
+              <p class="schedule__day">четверг</p>
             </li>
-            <li class="schedule__day">
-              <span class="schedule__time">12:00 — 20:00</span>
-              п'ятниця
+            <li class="schedule__workingDay">
+              <p class="schedule__time">12:00 — 20:00</p>
+              <p class="schedule__day">п'ятниця</p>
             </li>
-            <li class="schedule__day">
-              <span class="schedule__time">12:00 — 20:00</span>
-              субота
+            <li class="schedule__workingDay">
+              <p class="schedule__time">12:00 — 20:00</p>
+              <p class="schedule__day">субота</p>
             </li>
-            <li class="schedule__day">
-              <span class="schedule__time">12:00 — 20:00</span>
-              неділя
+            <li class="schedule__workingDay">
+              <p class="schedule__time">12:00 — 20:00</p>
+              <p class="schedule__day">неділя</p>
             </li>
             <li class="schedule__day--p">
-              <span class="schedule__day"> Вихідні</span>
-              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+              <p class="footer__daysOff">
+                <br>
+                <strong>Вихідні:</strong>
+                  понеділок, вівторок
+                </br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+              </p>
             </li>
           </ul>
         </div>
@@ -272,15 +277,15 @@
 
             <li class="schedule__adres">Київ, 01001</li>
 
-            <li class="schedule__adres"> тел.
+            <li class="schedule__link"> тел.
               <a href="tel:+380442781357" class="schedule__href">+38 (044) 278-13-57</a>
             </li>
 
-            <li class="schedule__adres">факс
+            <li class="schedule__link">факс
               <a href="tel:+380442787454" class="schedule__href">+38 (044) 278-74-54</a>
             </li>
 
-            <li class="schedule__adres">e-mail:
+            <li class="schedule__link">e-mail:
               <a class="schedule__href" href="mailto:info@namu.kyiv.ua"> info@namu.kyiv.ua </a>
             </li>
           </ul>
