added opacity to the additional menu

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <a href="#menu" class="header__burger-menu"></a>
     </header>
 
-    <aside class="aside" id="menu">
+    <menu class="aside" id="menu">
       <div class="aside__content">
         <div class="aside__top">
           <a href="#close" class="aside__close-icon aside__text"></a>
@@ -97,7 +97,8 @@
           <br>Kaca припиняє роботу за 1 годину до закриття музею
         </p>
       </div>
-    </aside>
+      <div class="aside__dark-bg"></div>
+    </menu>
 
     <main class="main">
 
