implement checklist from 10 to 14 item

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <div class="museum__button">
           <p class="museum__event-label">Події</p>
           <a
-            href="#"
+            href="#events"
             class="button"
           >
             <div class="button__title">квитки</div>
@@ -86,7 +86,7 @@
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item"><a href="#gallery">Галерея</a></li>
-              <li class="nav__item"><a href="#about">Про Нас</a></li>
+              <li class="nav__item"><a href="#contacts">Про Нас</a></li>
               <li class="nav__item"><a href="#events">Виставки та події</a></li>
               <li class="nav__item"><a href="#contacts">Контакти</a></li>
             </ul>
@@ -248,6 +248,7 @@
               name="email"
               class="subscribe__input"
               placeholder="E-mail"
+              required
             />
             <button
               type="submit"
@@ -272,12 +273,12 @@
             </a>
             <div class="footer__social-wrapper">
               <a
-                href="http://facebook.com"
+                href="https://www.facebook.com/namu.museum/"
                 class="footer__social footer__social--facebook"
                 target="_blank"
               ></a>
               <a
-                href="http://instagram.com"
+                href="https://www.instagram.com/namu.museum/"
                 class="footer__social footer__social--instagram"
                 target="_blank"
               ></a>
