--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,450 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.svg"
+      type="image/x-icon"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body
+    class="page__body"
+    id="top"
+  >
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a
+            class="header__menu"
+            href="#menu"
+          >
+            <img
+              class="icon icon--menu"
+              src="./images/icons/menu-icon.png"
+              alt="menu"
+            />
+          </a>
+
+          <div class="header__item">
+            <a
+              href="#"
+              class="header__logo"
+            >
+              NA
+              <br />
+              MU
+            </a>
+          </div>
+
+          <section class="art-museum">
+            <div class="art-museum__content">
+              <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+              <a
+                href="#"
+                class="art-museum__link"
+              >
+                <div class="art-museum__link-name">КВИТКИ</div>
+                <img
+                  class="art-museum__link-icon"
+                  src="./images/icons/arrow-right-icon.svg"
+                  alt="arrow-right"
+                />
+              </a>
+              <p class="art-museum__label">ПОДІЇ</p>
+            </div>
+          </section>
+        </div>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="icon icon--close"
+            ></a>
+            <nav class="menu__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#gallery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#subscribe"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#events"
+                    class="nav__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="nav__item">
+                  <a
+                    href="#contact"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__divider"></div>
+          <div class="menu__bottom">
+            <div class="menu__schedule">
+              <p class="menu__title">Графік роботи</p>
+              <div class="menu__week">
+                <ul class="menu__work-days">
+                  <li class="menu__work-day">
+                    12:00— 20:00
+                    <span class="menu__work-week">середа</span>
+                  </li>
+                  <li class="menu__work-day">
+                    12:00— 20:00
+                    <span class="menu__work-week">четвер</span>
+                  </li>
+                  <li class="menu__work-day">
+                    12:00— 20:00
+                    <span class="menu__work-week">п’ятниця</span>
+                  </li>
+                  <li class="menu__work-day">
+                    11:00 — 19:00
+                    <span class="menu__work-week">субота</span>
+                  </li>
+                  <li class="menu__work-day">
+                    11:00 — 19:00
+                    <span class="menu__work-week">неділя</span>
+                  </li>
+                </ul>
+                <p class="menu__weekend">
+                  <span class="menu__weekend-bold">Вихідні:</span>
+                  понеділок, вівторок Каса припиняє роботу за 1 годинудо
+                  закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__content">
+            <article class="event">
+              <img
+                class="event__image"
+                src="./images/events/event-bg-mobile-1.jpeg"
+                alt="event-1-image"
+              />
+              <div class="event__detail">
+                <div class="event__info">
+                  <p class="event__tag">ВИСТАВКА</p>
+                  <p class="event__time">26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title title">Йду і повертаюсь</h3>
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+            <article class="event">
+              <img
+                class="event__image"
+                src="./images/events/event-bg-mobile-2.jpeg"
+                alt="event-1-image"
+              />
+              <div class="event__detail">
+                <div class="event__info">
+                  <p class="event__tag">ВИСТАВКА</p>
+                  <p class="event__time">26.08-29.11.2019</p>
+                </div>
+                <h3 class="title event__title">І спогади і мрії</h3>
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <div class="f">
+          <div class="lecture__content">
+            <div class="lecture__info">
+              <p class="lecture__tag">ЛЕКЦІЯ</p>
+              <p class="lecture__time">26/08/2019 - 11:00</p>
+            </div>
+            <h2 class="lecture__title title">Від класицизму до романтизму</h2>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__slider slider-gallery">
+            <div class="slider-gallery__items">
+              <div class="slider-gallery__item slider-gallery__item--square">
+                <img
+                  class="slider-gallery__img"
+                  src="./images/slider-gallery/gallery-img-1.jpeg"
+                  alt="gallery image"
+                />
+              </div>
+              <div class="slider-gallery__item slider-gallery__item--wide">
+                <img
+                  class="slider-gallery__img"
+                  src="./images/slider-gallery/gallery-img-2.jpeg"
+                  alt="gallery image"
+                />
+              </div>
+              <div class="slider-gallery__item slider-gallery__item--wide">
+                <img
+                  class="slider-gallery__img"
+                  src="./images/slider-gallery/gallery-img-3.jpeg"
+                  alt="gallery image"
+                />
+              </div>
+              <div class="slider-gallery__item slider-gallery__item--square">
+                <img
+                  class="slider-gallery__img"
+                  src="./images/slider-gallery/gallery-img-4.jpeg"
+                  alt="gallery image"
+                />
+              </div>
+            </div>
+            <div class="slider-gallery__dots">
+              <div
+                class="slider-gallery__dot slider-gallery__dot--active"
+              ></div>
+              <div class="slider-gallery__dot"></div>
+              <div class="slider-gallery__dot"></div>
+              <div class="slider-gallery__dot"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="subscribe"
+        id="subscribe"
+      >
+        <div class="container">
+          <div class="subscribe__content">
+            <h2 class="subscribe__title">Підписка</h2>
+            <p class="subscribe__info">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="#"
+              class="subscribe__form"
+            >
+              <input
+                type="e-mail"
+                class="subscribe__input"
+                placeholder="E-mail"
+                required
+              />
+              <button class="subscribe__button">
+                <img
+                  class="subscribe__button-icon"
+                  src="./images/icons/arrow-right-black-icon.svg"
+                  alt="arrow-right"
+                />
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a
+              class="footer__logo"
+              href="#"
+            >
+              NA
+              <br />
+              MU
+            </a>
+            <div class="footer__social-links">
+              <img
+                class="icon icon--facebook"
+                alt="facebook"
+                src="./images/icons/facebook-icon.svg"
+              />
+              <img
+                class="icon icon--instagam"
+                alt="instagam"
+                src="./images/icons/instagram-icon.svg"
+              />
+            </div>
+          </div>
+          <div class="footer__schedule">
+            <div class="footer__label">Графік роботи</div>
+            <ul class="footer__days">
+              <li class="footer__day">
+                12:00— 20:00
+                <span class="footer__week">середа</span>
+              </li>
+              <li class="footer__day">
+                12:00— 20:00
+                <span class="footer__week">четвер</span>
+              </li>
+              <li class="footer__day">
+                12:00— 20:00
+                <span class="footer__week">п’ятниця</span>
+              </li>
+              <li class="footer__day">
+                11:00 — 19:00
+                <span class="footer__week">субота</span>
+              </li>
+              <li class="footer__day">
+                11:00 — 19:00
+                <span class="footer__week">неділя</span>
+              </li>
+            </ul>
+            <p class="footer__weekend">
+              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </p>
+          </div>
+          <div
+            class="footer__contact"
+            id="contact"
+          >
+            <div class="footer__label">Контакти:</div>
+            <p class="footer__contact-info">
+              <a
+                target="_blank"
+                href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tell:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+              факс +38 (044) 278-74-54
+              <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </p>
+          </div>
+          <a
+            href="#top"
+            class="btn-up"
+          >
+            <img
+              class="icon"
+              src="./images/icons/arrow-up.svg"
+              alt="arrow-up"
+            />
+          </a>
+
+          <div class="footer__divider"></div>
+          <div class="footer__bottom">
+            <nav class="footer__nav nav-footer">
+              <ul class="nav-footer__list">
+                <li class="nav-footer__item">
+                  <a
+                    href="#gallery"
+                    class="nav-footer__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="nav-footer__item">
+                  <a
+                    href="#subscribe"
+                    class="nav-footer__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="nav-footer__item">
+                  <a
+                    href="#events"
+                    class="nav-footer__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="nav-footer__item">
+                  <a
+                    href="#contact"
+                    class="nav-footer__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__copyright">
+            <p class="footer__copyright-text">Designed by Zhyriada Marina</p>
+            <p class="footer__copyright-text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
