--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="shortcut icon"
+      href="./images/icons/favicon.svg"
+      type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -63,13 +67,13 @@
           </div>
 
           <div class="navigation__left">
-            <a class="navigation__link" href="#">Галерея</a>
-            <a class="navigation__link" href="#"><nobr>Виставки та</nobr> події</a>
+            <a class="navigation__link" href="#gallery">Галерея</a>
+            <a class="navigation__link" href="#current-event"><nobr>Виставки та</nobr> події</a>
           </div>
 
           <div class="navigation__right">
-            <a class="navigation__link" href="#">Про Нас</a>
-            <a class="navigation__link" href="#">Контакти</a>
+            <a class="navigation__link" href="#subscribe">Про Нас</a>
+            <a class="navigation__link" href="#contacts">Контакти</a>
           </div>
         </nav>
 
@@ -118,7 +122,7 @@
     </aside>
 
     <main class="main">
-      <section class="current-events">
+      <section class="current-events" id="current-event">
         <div class="container">
           <h2 class="current-events__title">Актуальні події</h2>
 
@@ -130,17 +134,16 @@
                 alt="Event photo"
               >
 
-              <div class="current-event__name-time">
-                <p class="current-event__name">Виставка</p>
-
-                <p class="current-event__time">26.08-29.11.2019</p>
+              <div class="current-event__container">
+                <div class="current-event__name-time">
+                  <p class="current-event__name">Виставка</p>
+                  <p class="current-event__time">26.08-29.11.2019</p>
+                </div>
+                <h3 class="current-event__title">Йду і повертаюсь</h3>
+                <p class="current-event__desc">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
               </div>
-
-              <h3 class="current-event__title">Йду і повертаюсь</h3>
-
-              <p class="current-event__desc">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-              </p>
             </article>
 
             <article class="current-event">
@@ -150,17 +153,16 @@
                 alt="Event photo"
               >
 
-              <div class="current-event__name-time">
-                <p class="current-event__name">Виставка</p>
-
-                <p class="current-event__time">26.08-29.11.2019</p>
+              <div class="current-event__container">
+                <div class="current-event__name-time">
+                  <p class="current-event__name">Виставка</p>
+                  <p class="current-event__time">26.08-29.11.2019</p>
+                </div>
+                <h3 class="current-event__title">І спогади і мрії</h3>
+                <p class="current-event__desc">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
               </div>
-
-              <h3 class="current-event__title">І спогади і мрії</h3>
-
-              <p class="current-event__desc">
-                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-              </p>
             </article>
           </div>
         </div>
@@ -184,32 +186,38 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
 
         <div class="gallery__img-block">
           <img
-            class="gallery__img"
+            class="gallery__img gallery__img--first"
             src="./images/slider/slide-1.jpg"
             alt="First slider image"
           >
 
           <img
-            class="gallery__img"
+            class="gallery__img gallery__img--second"
             src="./images/slider/slide-2.jpg"
             alt="Second slider image"
           >
 
           <img
-            class="gallery__img"
-            src="./images/slider/slide-1.jpg"
+            class="gallery__img gallery__img--third"
+            src="./images/slider/slide-3.jpg"
             alt="Third slider image"
           >
 
           <img
-            class="gallery__img"
-            src="./images/slider/slide-2.jpg"
+            class="gallery__img gallery__img--fourth"
+            src="./images/slider/slide-4.jpg"
             alt="Fourth slider image"
+          >
+
+          <img
+            class="gallery__img gallery__img--fifth"
+            src="./images/slider/slide-5.jpg"
+            alt="Fifth slider image"
           >
         </div>
 
@@ -221,7 +229,7 @@
         </div>
       </section>
 
-      <section class="subscribe">
+      <section class="subscribe" id="subscribe">
         <div class="subscribe__wrapper">
           <div class="container">
             <div class="subscribe__content">
@@ -260,14 +268,16 @@
             <div class="footer__social">
               <a
                 class="footer__social-link footer__social-link--fb"
-                href="#"
+                href="https://facebook.com/"
+                target="_blank"
                 title="Facebook"
               >
               </a>
 
               <a
                 class="footer__social-link footer__social-link--inst"
-                href="#"
+                href="https://www.instagram.com/"
+                target="_blank"
                 title="Instagram"
               >
               </a>
@@ -317,7 +327,7 @@
               </div>
             </menu>
 
-            <section class="contacts">
+            <section class="contacts" id="contacts">
               <h6 class="contacts__title">Контакти:</h6>
 
               <address class="contacts__address">
@@ -348,13 +358,13 @@
 
           <nav class="navigation footer__navigation">
             <div class="navigation__left navigation__left--footer">
-              <a class="navigation__link navigation__link--footer" href="#">Галерея</a>
-              <a class="navigation__link navigation__link--footer" href="#"><nobr>Виставки та</nobr> події</a>
+              <a class="navigation__link navigation__link--footer" href="#gallery">Галерея</a>
+              <a class="navigation__link navigation__link--footer" href="#current-event"><nobr>Виставки та</nobr> події</a>
             </div>
 
             <div class="navigation__right navigation__right--footer">
-              <a class="navigation__link navigation__link--footer" href="#">Про Нас</a>
-              <a class="navigation__link navigation__link--footer" href="#">Контакти</a>
+              <a class="navigation__link navigation__link--footer" href="#subscribe">Про Нас</a>
+              <a class="navigation__link navigation__link--footer" href="#contacts">Контакти</a>
             </div>
           </nav>
 
