Implement mobile header

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,75 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="./images/logo.svg"
+      type="image/x-icon"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="top-bar">
+        <a
+          class="top-bar__menu-button"
+          href="#menu"
+        >
+          <img
+            src="./images/burger-menu.svg"
+            alt="Burger menu"
+          />
+        </a>
+
+        <img
+          class="top-bar__logo"
+          src="./images/logo.svg"
+          alt="NAMU logo"
+        />
+      </div>
+
+      <div class="header__image"></div>
+
+      <div class="header__container">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="header__tickets">
+          <p class="header__tickets-text">КВИТКИ</p>
+
+          <div class="header__tickets-button">
+            <img
+              src="images/arrow-right.svg"
+              alt="Arrow right"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="section current-events">
+        <h2 class="section-title">Актуальні події</h2>
+      </section>
+    </main>
   </body>
 </html>
