--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
           href="#menu"
         >
           <img
-            src="./images/burger-menu.svg"
+            src="./images/icons/burger-menu.svg"
             alt="Burger menu"
           />
         </a>
@@ -63,7 +63,7 @@
 
           <div class="header__tickets-button">
             <img
-              src="images/arrow-right.svg"
+              src="images/icons/arrow-right.svg"
               alt="Arrow right"
             />
           </div>
@@ -72,8 +72,58 @@
     </header>
 
     <main class="main">
-      <section class="section current-events">
-        <h2 class="section-title">Актуальні події</h2>
+      <section class="current-events">
+        <h2 class="current-events__title">Актуальні події</h2>
+
+        <div class="current-events__container">
+          <article class="event">
+            <img
+              class="event__image"
+              src="images/current-events/I leave and come back.png"
+              alt="I leave and come back image"
+            />
+
+            <div class="event__info-container">
+              <p class="event__type">ВИСТАВКА</p>
+              <p class="event__period">26.08-29.11.2019</p>
+            </div>
+
+            <div class="event__title-container">
+              <h3 class="event__title">Йду і повертаюсь</h3>
+              <div class="event__status"></div>
+            </div>
+
+            <p class="event__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </article>
+
+          <article class="event">
+            <img
+              class="event__image"
+              src="images/current-events/And memories and dreams.png"
+              alt="And memories and dreams"
+            />
+
+            <div class="event__info-container">
+              <p class="event__type">ВИСТАВКА</p>
+              <p class="event__period">26.08-29.11.2019</p>
+            </div>
+
+            <div class="event__title-container">
+              <h3 class="event__title">І спогади і мрії</h3>
+              <div class="event__status"></div>
+            </div>
+
+            <p class="event__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </article>
+        </div>
       </section>
     </main>
   </body>
