add cursor pointer

--- a/src/index.html
+++ b/src/index.html
@@ -381,7 +381,8 @@
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
               <a href="tell:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
-              факс +38 (044) 278-74-54
+
+              <a href="fax:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
               <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
             </p>
           </div>
