Finish mobile design

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       defer
     ></script>
   </head>
-  <body>
+  <body id="top">
     <header class="header">
       <div class="top-bar">
         <a
@@ -42,7 +42,7 @@
         >
           <img
             src="./images/icons/burger-menu.svg"
-            alt="Burger menu"
+            alt="Menu button"
           />
         </a>
 
@@ -70,6 +70,89 @@
         </div>
       </div>
     </header>
+
+    <aside
+      class="menu"
+      id="menu"
+    >
+      <div class="menu__container">
+        <div class="menu__top-container">
+          <a
+            href="#"
+            class="menu__close-button"
+          >
+            <img
+              src="images/icons/close.svg"
+              alt="Close button"
+            />
+          </a>
+
+          <div class="menu__links-container">
+            <a
+              class="menu__link"
+              href="#gallery"
+            >
+              Галерея
+            </a>
+            <a
+              class="menu__link"
+              href="#events"
+            >
+              Виставки та
+              <br />
+              події
+            </a>
+          </div>
+
+          <div class="menu__links-container">
+            <a
+              class="menu__link"
+              href="#about-us"
+            >
+              Про Нас
+            </a>
+            <a
+              class="menu__link"
+              href="#contacts"
+            >
+              Контакти
+            </a>
+          </div>
+        </div>
+
+        <div class="menu__line"></div>
+
+        <div class="menu__schelude-container">
+          <p class="menu__schelude-entry">Графік роботи</p>
+
+          <p class="menu__schelude-entry">
+            <strong>12:00 — 20:00</strong>
+            середа
+            <br />
+            <strong>12:00 — 20:00</strong>
+            четвер
+            <br />
+            <strong>12:00 — 20:00</strong>
+            п’ятниця
+            <br />
+            <strong>11:00 — 19:00</strong>
+            субота
+            <br />
+            <strong>11:00 — 19:00</strong>
+            неділя
+          </p>
+
+          <p class="menu__schelude-entry">
+            <strong>Вихідні:</strong>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+
+      <div class="menu__background"></div>
+    </aside>
 
     <main class="main">
       <section class="current-events">
@@ -175,10 +258,155 @@
 
       <section class="subscription">
         <h2 class="subscription__title">Підписка</h2>
-        <h3 class="subscription__subtitle">
+        <p class="subscription__subtitle">
           Бути в курсі всіх актуальних подій та останніх новин.
-        </h3>
+        </p>
+
+        <form
+          class="subscription__input"
+          onsubmit="this.reset(); return false;"
+        >
+          <input
+            class="subscription__input-field"
+            type="email"
+            placeholder="E-mail"
+            required
+          />
+
+          <button class="subscription__input-button">
+            <img
+              src="images/icons/arrow-right-black.svg"
+              alt="Arrow right"
+            />
+          </button>
+        </form>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__top">
+        <img
+          src="images/logo.svg"
+          alt="NUMA logo"
+        />
+
+        <div class="footer__socials">
+          <a
+            class="footer__social-link"
+            href="https://facebook.com/"
+            target="_blank"
+          >
+            <img
+              src="images/icons/facebook-logo.svg"
+              alt="NUMA logo"
+            />
+          </a>
+
+          <a
+            class="footer__social-link"
+            href="https://instagram.com/"
+            target="_blank"
+          >
+            <img
+              src="images/icons/instagram-logo.svg"
+              alt="NUMA logo"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__info-container footer__schelude-container">
+        <p>Графік роботи</p>
+
+        <p>
+          <strong>12:00 — 20:00</strong>
+          <br />
+          середа
+          <br />
+          <strong>12:00 — 20:00</strong>
+          <br />
+          четвер
+          <br />
+          <strong>12:00 — 20:00</strong>
+          <br />
+          п’ятниця
+          <br />
+          <strong>11:00 — 19:00</strong>
+          <br />
+          субота
+          <br />
+          <strong>11:00 — 19:00</strong>
+          <br />
+          неділя
+        </p>
+
+        <p>
+          Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+          закриття музею
+        </p>
+      </div>
+
+      <div class="footer__info-container footer__contacts-container">
+        <p class="footer__contacts-title">Контакти:</p>
+
+        <p class="footer__contacts">
+          вул. М. Грушевського, 6; Київ, 01001
+          <br />
+          тел. +38 (044) 278-13-57
+          <br />
+          факс +38 (044) 278-74-54
+          <br />
+          e-mail: info@namu.kiev.ua
+        </p>
+      </div>
+
+      <a
+        class="footer__arrow-up"
+        href="#top"
+      >
+        <img
+          src="images/icons/arrow-up.svg"
+          alt="Arrow up"
+        />
+      </a>
+
+      <div class="footer__bottom-line"></div>
+
+      <div class="footer__links-container footer__links-container-left">
+        <a
+          class="footer__link"
+          href="#gallery"
+        >
+          Галерея
+        </a>
+        <a
+          class="footer__link"
+          href="#events"
+        >
+          Виставки та події
+        </a>
+      </div>
+
+      <div class="footer__links-container footer__links-container--right">
+        <a
+          class="footer__link"
+          href="#about-us"
+        >
+          Про Нас
+        </a>
+        <a
+          class="footer__link"
+          href="#contacts"
+        >
+          Контакти
+        </a>
+      </div>
+
+      <p class="footer__copyright">
+        Designed by Zhyriada Marina
+        <br />
+        Copyright © 2019. All Rights Reserved.
+      </p>
+    </footer>
   </body>
 </html>
