Add animations for images and submit button

--- a/src/index.html
+++ b/src/index.html
@@ -62,12 +62,15 @@
           <div class="header__tickets">
             <p class="header__tickets-text">КВИТКИ</p>
 
-            <div class="header__tickets-button">
+            <a
+              class="header__tickets-button"
+              href="#events"
+            >
               <img
                 src="images/icons/arrow-right.svg"
                 alt="Arrow right"
               />
-            </div>
+            </a>
           </div>
 
           <img
@@ -165,7 +168,10 @@
     </aside>
 
     <main class="main">
-      <section class="current-events">
+      <section
+        class="current-events"
+        id="events"
+      >
         <h2 class="current-events__title">Актуальні події</h2>
 
         <div class="current-events__container">
@@ -242,7 +248,10 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section
+        class="gallery"
+        id="gallery"
+      >
         <div class="gallery__container">
           <h2 class="gallery__title">Галерея</h2>
         </div>
@@ -303,7 +312,10 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section
+        class="subscription"
+        id="about-us"
+      >
         <h2 class="subscription__title">Підписка</h2>
         <p class="subscription__subtitle">
           Бути в курсі всіх актуальних подій та останніх новин.
@@ -330,7 +342,10 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer
+      class="footer"
+      id="contacts"
+    >
       <div class="footer__top">
         <img
           class="footer__logo"
