add_title_and_footer_links

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
     <link
       href="/src/images/icon/favicon_io/favicon.ico"
       rel="icon"
@@ -446,8 +446,20 @@
               <h3 class="footer__contact--title">Контакти:</h3>
 
               <p class="footer__contact--info">
-                вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+                вул. М. Грушевського, 6; Київ, 01001 тел.
+                <a
+                  class="footer__contact--info--link"
+                  href="tel:+38 (044) 278-74-54"
+                >
+                  +38 (044) 278-13-57
+                </a>
+                факс +38 (044) 278-74-54 e-mail:
+                <a
+                  class="footer__contact--info--link"
+                  href="malito:info@namu.kiev.ua"
+                >
+                  info@namu.kiev.ua
+                </a>
               </p>
             </div>
 
