Fix text issues and add links

--- a/src/index.html
+++ b/src/index.html
@@ -408,13 +408,22 @@
         <p class="footer__contacts-title">Контакти:</p>
 
         <p class="footer__contacts">
-          вул. М. Грушевського, 6; Київ, 01001
+          вул.
+          <a
+            href="https://maps.app.goo.gl/2VqJWuQkGh68P6AW6"
+            target="_blank"
+          >
+            М. Грушевського, 6; Київ, 01001
+          </a>
           <br />
-          тел. +38 (044) 278-13-57
+          тел.
+          <a href="tel:+38 (044) 278-13-57">+38 (044) 278-13-57</a>
           <br />
-          факс +38 (044) 278-74-54
+          факс
+          <a href="tel:+38 (044) 278-74-54">+38 (044) 278-74-54</a>
           <br />
-          e-mail: info@namu.kiev.ua
+          e-mail:
+          <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
         </p>
       </div>
 
