Fix links and add some animations

--- a/src/index.html
+++ b/src/index.html
@@ -410,6 +410,7 @@
         <p class="footer__contacts">
           вул.
           <a
+            class="footer__contact-link"
             href="https://maps.app.goo.gl/2VqJWuQkGh68P6AW6"
             target="_blank"
           >
@@ -417,13 +418,28 @@
           </a>
           <br />
           тел.
-          <a href="tel:+38 (044) 278-13-57">+38 (044) 278-13-57</a>
+          <a
+            class="footer__contact-link"
+            href="tel:+38 (044) 278-13-57"
+          >
+            +38 (044) 278-13-57
+          </a>
           <br />
           факс
-          <a href="tel:+38 (044) 278-74-54">+38 (044) 278-74-54</a>
+          <a
+            class="footer__contact-link"
+            href="tel:+38 (044) 278-74-54"
+          >
+            +38 (044) 278-74-54
+          </a>
           <br />
           e-mail:
-          <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+          <a
+            class="footer__contact-link"
+            href="mailto:info@namu.kiev.ua"
+          >
+            info@namu.kiev.ua
+          </a>
         </p>
       </div>
 
