--- a/src/index.html
+++ b/src/index.html
@@ -347,11 +347,15 @@
       id="contacts"
     >
       <div class="footer__top">
-        <img
+        <a
           class="footer__logo"
-          src="images/logo.svg"
-          alt="NUMA logo"
-        />
+          href="#"
+        >
+          <img
+            src="images/logo.svg"
+            alt="NUMA logo"
+          />
+        </a>
 
         <div class="footer__socials">
           <a
