add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,10 @@
             <a href="#" class="contacts__logo">NA<br>MU</a>
 
             <div class="contacts__soccial">
-              <a href="https://www.facebook.com/" class="contacts__soc-link">
+              <a href="https://www.facebook.com/"
+                 class="contacts__soc-link"
+                 target="_blank"
+                 >
                 <img
                   src="./images/icons/facebook.png"
                   alt="facebook"
@@ -243,7 +246,9 @@
                 >
               </a>
 
-              <a href="https://www.instagram.com/" class="contacts__soc-link">
+              <a href="https://www.instagram.com/"
+                 target="_blank"
+                 class="contacts__soc-link">
                 <img
                   src="./images/icons/instagram.png"
                   alt="instagram"
