--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,11 @@
           <section class="art-museum">
             <div class="art-museum__content">
               <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-              <a href="#" class="art-museum__link">
+              <a
+                href="#"
+                class="art-museum__link"
+                id="ticket_button"
+              >
                 <div class="art-museum__link-name">КВИТКИ</div>
                 <img
                   class="art-museum__link-icon"
@@ -188,35 +192,27 @@
           <div class="gallery__slider slider-gallery">
             <div class="slider-gallery__items">
               <div class="slider-gallery__item slider-gallery__item--square">
-                <img
-                  class="slider-gallery__img"
-                  src="./images/gallery/gallery-img-1.jpeg"
-                  alt="gallery image">
+                <img class="slider-gallery__img" src="./images/gallery/gallery-img-1.jpeg"
+                alt="gallery image">
               </div>
               <div class="slider-gallery__item slider-gallery__item--wide">
-                <img
-                  class="slider-gallery__img"
-                  src="./images/gallery/gallery-img-2.jpeg"
-                  alt="gallery image">
+                <img class="slider-gallery__img" src="./images/gallery/gallery-img-2.jpeg"
+                 alt="gallery image">
               </div>
               <div class="slider-gallery__item slider-gallery__item--wide">
-                <img
-                  class="slider-gallery__img"
-                  src="./images/gallery/gallery-img-3.jpeg"
-                  alt="gallery image">
+                <img class="slider-gallery__img" src="./images/gallery/gallery-img-3.jpeg"
+                 alt="gallery image">
               </div>
               <div class="slider-gallery__item slider-gallery__item--square">
-                <img
-                  class="slider-gallery__img"
-                  src="./images/gallery/gallery-img-4.jpeg"
-                  alt="gallery image">
+                <img class="slider-gallery__img" src="./images/gallery/gallery-img-4.jpeg"
+                 alt="gallery image">
               </div>
             </div>
             <div class="slider-gallery__dots">
-              <div class="slider-gallery__dot slider-gallery__dot--active"></div>
-              <div class="slider-gallery__dot"></div>
-              <div class="slider-gallery__dot"></div>
-              <div class="slider-gallery__dot"></div>
+              <div class="slider-gallery__dot slider-gallery__dot--active" onclick="changeSlide(0)"></div>
+              <div class="slider-gallery__dot" onclick="changeSlide(1)"></div>
+              <div class="slider-gallery__dot" onclick="changeSlide(2)"></div>
+              <div class="slider-gallery__dot" onclick="changeSlide(3)"></div>
             </div>
           </div>
         </div>
@@ -236,7 +232,7 @@
                 placeholder="E-mail"
                 required
               >
-              <button class="subscribe__button">
+              <button class="subscribe__button" id="subscribe_button">
                 <img
                   class="subscribe__button-icon"
                   src="./images/icons/arrow-right-black-icon.svg"
@@ -259,16 +255,20 @@
               MU
             </a>
             <div class="footer__social-links">
-              <img
-                class="icon icon--facebook"
-                alt="facebook"
-                src="./images/icons/facebook-icon.svg"
-              >
-              <img
-                class="icon icon--instagam"
-                alt="instagam"
-                src="./images/icons/instagram-icon.svg"
-              >
+              <a href="https://www.facebook.com/">
+                <img
+                  class="icon icon--facebook"
+                  alt="facebook"
+                  src="./images/icons/facebook-icon.svg"
+                >
+              </a>
+              <a href="https://www.instagram.com/">
+                <img
+                  class="icon icon--instagam"
+                  alt="instagam"
+                  src="./images/icons/instagram-icon.svg"
+                >
+              </a>
             </div>
           </div>
           <div class="footer__schedule">
