--- a/src/index.html
+++ b/src/index.html
@@ -258,8 +258,10 @@
       <aside class="footer__links">
         <a href="#" class="icon icon--logo icon--footer"></a>
         <div class="footer__social">
-          <a href="https://www.facebook.com/" class="icon icon--facebook"></a>
-          <a href="https://www.instagram.com/" class="icon icon--instagram"></a>
+          <a href="https://www.facebook.com/" class="icon icon--facebook"
+          target="_blank"></a>
+          <a href="https://www.instagram.com/" class="icon icon--instagram"
+          target="_blank"></a>
         </div>
       </aside>
 
