--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,8 @@
       <section class="address">
         <div class="address__title">Контакти:</div>
         <p class="address__contacts">
-          <a href="https://maps.app.goo.gl/ivdASr8uRL8eDj9P7" class="address__link">
+          <a href="https://maps.app.goo.gl/ivdASr8uRL8eDj9P7" class="address__link"
+          target="_blank">
             вул. М. Грушевського, 6;
           </a> <br>
           Київ, 01001 <br>
